cloudsim: add check-in concept
